# bodypix_rust_demo

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: bodypix.rs  image_utils.rs  main.rs
