[package]
name = "bodypix_demo"
version = "0.1.0"
authors = ["Filip Joelsson <filip@pixiecoder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.16.0"
tensorflow = { version = "0.16.1", features = ["tensorflow_gpu", "tensorflow_unstable"] }
dirs = "3.0.2"
