[package]
name = "bodypix_demo"
version = "0.1.0"
authors = ["Filip Joelsson <filip@pixiecoder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.16.*"
tensorflow = { version = "0.16.*", features = ["tensorflow_gpu", "tensorflow_unstable"] }
dirs = "3.0.*"

[build-dependencies]
tokio = { version="1.*", features= ["full"] }
reqwest = "0.11.*"
serde_json = "1.0.*"
bytes = "1.0.*"
pyo3 = { version = "0.13.*", features = ["auto-initialize"] }
